# eidch-pilot-elfa-base-infrastructure

./: .gitignore  CONTRIBUTING.md  DEV.md  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  hsm_environment_variables.sh  pyproject.toml  reset_environment.sh  setup_environment.sh  softhsm2.conf
LICENSES/: MIT.txt
admin/: README.md  admin.py  changelog.md  config.py  db.py  main.py
admin/route/: health.py
common/: changelog.md  pyproject.toml
common/common/: apikey.py  config.py  credential_offer.py  fastapi_extensions.py  httpx_wrapper.py  jwt_utils.py  key_configuration.py  parsing.py  status_list.py  verifiable_credential.py  version.py
common/common/db/: postgres.py
common/common/db/alembic/: default_env.py
common/common/db/model/: public_key.py  status_list.py
common/common/health/: __init__.py  base.py  db_connection_check.py
common/common/hsm/: override.py
common/common/logging/: operations.py  setup.py  splunk.py
common/common/model/: __init__.py  dif_presentation_exchange.py  exception.py  ietf.py  openid.py  openid4vc.py
common/common/model/registry/: __init__.py  communication.py  public_key.py
common/common/test_helpers/: wallet_helper.py
common/common/tests/: test_hsm_override.py  test_ietf.py  test_logging.py  test_parsing.py  test_verifiable_credential.py
common/tests/: test_parsing.py
issuer/: README.md  alembic.ini  builder.py  changelog.md  config.py  credential_offer.py  issuer.py  logging.py  main.py  models.py  statuslist2021.py  timeout.py
issuer/alembic/: README  script.py.mako.license
issuer/db/: credential.py  metadata.py  status_list.py
issuer/exception/: credential_error_responses.py  handler.py
issuer/route/: admin.py  generic_issuer.py  health.py  openid.py  redirect.py  registry.py
issuer/test/: hardcoded_creds.py  test_issuer.py
registry_base/: README.md  alembic.ini  config.py  main.py  registry.py  test_registry_base.py
registry_revocation/: README.md  alembic.ini  changelog.md  config.py  main.py  registry.py  test_registry_revocation.py
registry_revocation/alembic/: env.py
registry_revocation/route/: health.py
test_system/: changelog.md  readme.md  test_environment.py  test_errors.py  test_setup.py
test_system/files/: degree_credential_offer_data.json  elfa_image.base64  issuer_metadata.json  offer_link_redirect.html  portrait.base64  qrcode.base64  signature.base64
verifier/: README.md  changelog.md  config.py  logging.py  main.py  models.py  verification.py  verifier.py
verifier/cache/: verifier_cache.py
verifier/exception/: __init__.py  authorization_request_errors.py  authorization_response_errors.py  extended_authorization_response_errors.py  handler.py  verification_management_errors.py
wallet/: README.md  changelog.md  config.py  credential_store.py  main.py  oid4vc_fetcher.py  opid4vp_presenter.py  wallet.py
(+18 files in other folders)
